add links and modify pages

--- a/index.html
+++ b/index.html
@@ -51,19 +51,19 @@
                     <div class="btn-sci">
                         <a href="#" class="btn">Download CV</a>
                         <div class="sci">
-                            <a href="#">
+                            <a href="https://github.com/Anandhuharidas">
                                 <i class='bx bxl-github'></i>
                                 <span class="tooltip">Github</span>
                             </a>
-                            <a href="#">
+                            <a href="https://www.linkedin.com/in/anandhu-haridas-654325305/">
                                 <i class='bx bxl-linkedin' ></i>
                                 <span class="tooltip">Linkedin</span>
                             </a>
-                            <a href="#">
+                            <a href="https://www.instagram.com/_an_an_dh/?next=%2F">
                                 <i class='bx bxl-instagram-alt'></i>
                                 <span class="tooltip">Instagram</span>
                             </a>
-                            <a href="#">
+                            <a href="https://www.facebook.com/profile.php?id=100012034008832">
                                 <i class='bx bxl-facebook-circle' ></i>
                                <span class="tooltip">Facebook</span>     
                             </a>
@@ -116,7 +116,7 @@
                         <h4> 2024 - Present</h4>
                         <h4> Fullstack Developer</h4>
                         <h4>Quest Innovative Solutions .NET Developer Trainee</h4>
-                        <p><i class='bx bxs-star str'></i> Participated in training sessions and workshops to develop proficiency in .NET <br>
+                        <p><i class='bx bxs-star str'></i> Participated in training sessions and workshops to develop proficiency in .NET <br> 
                                                            Programming Language, including its syntax, data structure and libraries.</p>
                         <p><i class='bx bxs-star str'></i> Collaborated with the development team to assist in the designs and implementation of
                                                           .NET-based software solutions, contributing to various stages of the development
@@ -213,10 +213,10 @@
                     <div class="tab-grid portfolio-box work active">
                         <div class="tab-item portfolio-item">
                             <div class="work-img">
-                                <img src="./assets/images/Screenshot (15).png" alt="">
+                                <img src="./assets/images/work5.png" alt="">
                             </div>
                             <div class="work-info">
-                                <h4>Frontend Project</h4>
+                                <h4>3d-Portfolio</h4>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates ducimus nuljhdhdhdhdhdhdnddhhdhdhnd.</p>
                                 <div class="tech-used">
                                     <p>HTML5, CSS3, JavaScript</p>
@@ -226,7 +226,7 @@
                                         <i class='bx bx-arrow-back'></i>
                                         <span class="tooltip">Preview</span>
                                     </a>
-                                    <a href="#">
+                                    <a href="https://anandhuharidas.github.io/3d-portfolio/">
                                         <i class='bx bxl-github' ></i>
                                         <span class="tooltip">Github Repository</span>
                                     </a>
@@ -235,10 +235,10 @@
                         </div>
                         <div class="tab-item portfolio-item">
                             <div class="work-img">
-                                <img src="./assets/images/16.png" alt="">
+                                <img src="./assets/images/work1.png" alt="">
                             </div>
                             <div class="work-info">
-                                <h4>Frontend Project</h4>
+                                <h4>Dark-mode</h4>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates ducimus nuljhdhdhdhdhdhdnddhhdhdhnd.</p>
                                 <div class="tech-used">
                                     <p>HTML5, CSS3, JavaScript</p>
@@ -248,7 +248,7 @@
                                         <i class='bx bx-arrow-back'></i>
                                         <span class="tooltip">Preview</span>
                                     </a>
-                                    <a href="#">
+                                    <a href=" https://anandhuharidas.github.io/Dark-mode/">
                                         <i class='bx bxl-github' ></i>
                                         <span class="tooltip">Github Repository</span>
                                     </a>
@@ -257,20 +257,20 @@
                         </div>
                         <div class="tab-item portfolio-item">
                             <div class="work-img">
-                                <img src="./assets/images/Screenshot (17).png" alt="">
+                                <img src="./assets/images/work2.png" alt="">
                             </div>
                             <div class="work-info">
-                                <h4>Frontend Project</h4>
+                                <h4>Chess-board</h4>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates ducimus nuljhdhdhdhdhdhdnddhhdhdhnd.</p>
                                 <div class="tech-used">
-                                    <p>HTML5, CSS3, Bootstrap</p>
+                                    <p>HTML5, CSS3, JavaScript</p>
                                 </div>
                                 <div class="portfolio-icon work-icon">
                                     <a href="#">
                                         <i class='bx bx-arrow-back'></i>
                                         <span class="tooltip">Preview</span>
                                     </a>
-                                    <a href="#">
+                                    <a href="https://anandhuharidas.github.io/chess-board/">
                                         <i class='bx bxl-github' ></i>
                                         <span class="tooltip">Github Repository</span>
                                     </a>
@@ -279,22 +279,66 @@
                         </div>
                         <div class="tab-item portfolio-item">
                             <div class="work-img">
-                                <img src="./assets/images/Screenshot (18).png" alt="">
+                                <img src="./assets/images/work3.png" alt="">
+                            </div>
+                            <div class="work-info">
+                                <h4>Bootsrap</h4>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates ducimus nuljhdhdhdhdhdhdnddhhdhdhnd.</p>
+                                <div class="tech-used">
+                                    <p>HTML5, CSS3, Bootsrap</p>
+                                </div>
+                                <div class="portfolio-icon work-icon">
+                                    <a href="#">
+                                        <i class='bx bx-arrow-back'></i>
+                                        <span class="tooltip">Preview</span>
+                                    </a>
+                                    <a href="https://anandhuharidas.github.io/bs-prjct1/">
+                                        <i class='bx bxl-github' ></i>
+                                        <span class="tooltip">Github Reopistory</span>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="tab-item portfolio-item">
+                            <div class="work-img">
+                                <img src="./assets/images/work4.png" alt="">
                             </div>
                             <div class="work-info">
                                 <h4>Frontend referenced Project</h4>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates ducimus nuljhdhdhdhdhdhdnddhhdhdhnd.</p>
                                 <div class="tech-used">
-                                    <p>HTML5, CSS3</p>
+                                    <p>HTML5, CSS3,</p>
                                 </div>
                                 <div class="portfolio-icon work-icon">
                                     <a href="#">
                                         <i class='bx bx-arrow-back'></i>
                                         <span class="tooltip">Preview</span>
                                     </a>
-                                    <a href="#">
+                                    <a href="https://anandhuharidas.github.io/eduford/">
                                         <i class='bx bxl-github' ></i>
-                                        <span class="tooltip">Github Reopistory</span>
+                                        <span class="tooltip">Github Repository</span>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="tab-item portfolio-item">
+                            <div class="work-img">
+                                <img src="./assets/images/work6.png" alt="">
+                            </div>
+                            <div class="work-info">
+                                <h4>Toggle-form</h4>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates ducimus nuljhdhdhdhdhdhdnddhhdhdhnd.</p>
+                                <div class="tech-used">
+                                    <p>HTML5, CSS3, JavaScript</p>
+                                </div>
+                                <div class="portfolio-icon work-icon">
+                                    <a href="#">
+                                        <i class='bx bx-arrow-back'></i>
+                                        <span class="tooltip">Preview</span>
+                                    </a>
+                                    <a href=" https://anandhuharidas.github.io/Toggle-form/">
+                                        <i class='bx bxl-github' ></i>
+                                        <span class="tooltip">Github Repository</span>
                                     </a>
                                 </div>
                             </div>
