--- a/index.html
+++ b/index.html
@@ -47,9 +47,13 @@
                     <h3>Hello I'm</h3>
                     <h1>Anandhu Haridas</h1>
                     <h3>Frontend Developer</h3>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nihil, itaque repudiandae eveniet incidunt, libero tenetur blanditiis veniam placeat nemo perspiciatis veritatis voluptatem eos dolor ratione? Veniam sed hic accusantium fugiat?</p>
+                    <p>Enthusiastic and detail-oriented .NET developer with a solid foundation in programming principles and a 
+                        passion for building efficient, scalable applications. Hands-on experience in C#, ASP.NET, and SQL 
+                        Server through academic projects and internships. Adept at problem-solving and eager to contribute to 
+                        a dynamic development team.</p>
+                        
                     <div class="btn-sci">
-                        <a href="#" class="btn">Download CV</a>
+                        <a href="./assets/Docs/ANANDHU HARIDAS cv.pdf" class="btn" download="Anandhu Haridas">Download CV</a>
                         <div class="sci">
                             <a href="https://github.com/Anandhuharidas">
                                 <i class='bx bxl-github'></i>
