--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                             </div>
                             <div class="work-info">
                                 <h4>3d-Portfolio</h4>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates ducimus nuljhdhdhdhdhdhdnddhhdhdhnd.</p>
+                                <p>Created a responsive 3D-Portfolio Website showcasing my projects and skills.</p>
                                 <div class="tech-used">
                                     <p>HTML5, CSS3, JavaScript</p>
                                 </div>
@@ -331,7 +331,7 @@
                             </div>
                             <div class="work-info">
                                 <h4>Toggle-form</h4>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates ducimus nuljhdhdhdhdhdhdnddhhdhdhnd.</p>
+                                <p>Created a user-friendly toggle-form in my own design including login and registration pages.</p>
                                 <div class="tech-used">
                                     <p>HTML5, CSS3, JavaScript</p>
                                 </div>
